more upgradle and deprecation updates